[gd_scene load_steps=11 format=3 uid="uid://4jgfe1yxhg6s"]

[ext_resource type="Script" path="res://scenes/intro.gd" id="1_cscjy"]
[ext_resource type="TileSet" uid="uid://csebuns73umpe" path="res://scenes/ground_ts.tres" id="1_ee2g7"]
[ext_resource type="PackedScene" uid="uid://byajq2ce8t3bn" path="res://actors/king/king.tscn" id="2_niwdu"]
[ext_resource type="Texture2D" uid="uid://bfbwgdpf65a5x" path="res://graphics/tileset/TX Village Props.png" id="3_m84pw"]
[ext_resource type="PackedScene" uid="uid://cva1u0rtei2cf" path="res://actors/player/player.tscn" id="4_vvsxt"]
[ext_resource type="PackedScene" uid="uid://c0t7uj0xljvk6" path="res://actors/king_guard/king_guard.tscn" id="5_b31l0"]
[ext_resource type="PackedScene" uid="uid://d0nowc8p7asu4" path="res://scenes/parallax_background.tscn" id="6_xwj8l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rcq0y"]
texture = ExtResource("3_m84pw")
26:0/0 = 0
27:0/0 = 0
44:0/0 = 0
45:0/0 = 0
46:0/0 = 0
60:0/0 = 0
61:0/0 = 0
62:0/0 = 0
63:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
45:1/0 = 0
46:1/0 = 0
54:1/0 = 0
55:1/0 = 0
56:1/0 = 0
57:1/0 = 0
60:1/0 = 0
61:1/0 = 0
62:1/0 = 0
63:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
16:2/size_in_atlas = Vector2i(2, 2)
16:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
40:2/0 = 0
41:2/0 = 0
45:2/0 = 0
46:2/0 = 0
49:2/0 = 0
50:2/0 = 0
51:2/0 = 0
52:2/0 = 0
55:2/0 = 0
56:2/0 = 0
59:2/0 = 0
61:2/0 = 0
62:2/0 = 0
63:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
40:3/0 = 0
41:3/0 = 0
44:3/0 = 0
45:3/0 = 0
46:3/0 = 0
47:3/0 = 0
50:3/0 = 0
51:3/0 = 0
54:3/0 = 0
55:3/0 = 0
56:3/0 = 0
57:3/0 = 0
59:3/0 = 0
61:3/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
59:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
11:5/0 = 0
16:5/0 = 0
19:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
59:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
54:6/0 = 0
55:6/0 = 0
59:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
44:7/0 = 0
45:7/0 = 0
49:7/0 = 0
50:7/0 = 0
51:7/0 = 0
54:7/0 = 0
55:7/0 = 0
58:7/0 = 0
59:7/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
44:8/0 = 0
45:8/0 = 0
58:8/0 = 0
59:8/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
32:9/0 = 0
33:9/0 = 0
36:9/0 = 0
37:9/0 = 0
40:9/0 = 0
41:9/0 = 0
44:9/0 = 0
45:9/0 = 0
16:10/0 = 0
17:10/size_in_atlas = Vector2i(1, 2)
17:10/0 = 0
20:10/0 = 0
21:10/0 = 0
28:10/0 = 0
29:10/0 = 0
32:10/0 = 0
33:10/0 = 0
36:10/0 = 0
37:10/0 = 0
40:10/0 = 0
41:10/0 = 0
44:10/0 = 0
45:10/0 = 0
46:10/0 = 0
47:10/0 = 0
50:10/0 = 0
51:10/0 = 0
53:10/0 = 0
54:10/0 = 0
55:10/0 = 0
56:10/0 = 0
16:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
36:11/0 = 0
37:11/0 = 0
40:11/0 = 0
41:11/0 = 0
43:11/0 = 0
44:11/0 = 0
45:11/0 = 0
46:11/0 = 0
47:11/0 = 0
50:11/0 = 0
51:11/0 = 0
53:11/0 = 0
54:11/0 = 0
55:11/0 = 0
16:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
16:13/0 = 0
19:13/0 = 0
20:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
8:14/0 = 0
9:14/0 = 0
35:14/0 = 0
36:14/0 = 0
37:14/0 = 0
38:14/0 = 0
40:14/0 = 0
41:14/0 = 0
45:14/0 = 0
46:14/0 = 0
8:15/0 = 0
9:15/0 = 0
13:15/0 = 0
14:15/0 = 0
35:15/0 = 0
36:15/0 = 0
37:15/0 = 0
38:15/0 = 0
40:15/0 = 0
41:15/0 = 0
44:15/0 = 0
45:15/0 = 0
46:15/0 = 0
47:15/0 = 0
49:15/0 = 0
50:15/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
36:16/0 = 0
37:16/0 = 0
40:16/0 = 0
41:16/0 = 0
44:16/0 = 0
45:16/0 = 0
46:16/0 = 0
47:16/0 = 0
49:16/0 = 0
50:16/0 = 0
58:16/size_in_atlas = Vector2i(2, 4)
58:16/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
36:17/0 = 0
37:17/0 = 0
40:17/0 = 0
41:17/0 = 0
44:17/0 = 0
45:17/0 = 0
46:17/0 = 0
47:17/0 = 0
48:17/0 = 0
49:17/0 = 0
50:17/0 = 0
51:17/0 = 0
8:18/0 = 0
9:18/0 = 0
36:18/0 = 0
37:18/0 = 0
45:18/0 = 0
46:18/0 = 0
49:18/0 = 0
50:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
8:19/0 = 0
9:19/0 = 0
36:19/0 = 0
37:19/0 = 0
45:19/0 = 0
46:19/0 = 0
49:19/0 = 0
50:19/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
12:20/0 = 0
20:20/0 = 0
21:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
31:20/0 = 0
3:21/0 = 0
6:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
31:21/0 = 0
34:21/0 = 0
35:21/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
20:22/0 = 0
21:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
30:22/0 = 0
31:22/0 = 0
34:22/0 = 0
35:22/0 = 0
36:22/0 = 0
41:22/0 = 0
42:22/0 = 0
43:22/0 = 0
44:22/0 = 0
45:22/0 = 0
46:22/0 = 0
47:22/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
31:23/0 = 0
34:23/0 = 0
35:23/0 = 0
36:23/0 = 0
37:23/0 = 0
38:23/0 = 0
39:23/0 = 0
40:23/0 = 0
41:23/0 = 0
42:23/0 = 0
43:23/0 = 0
44:23/0 = 0
45:23/0 = 0
46:23/0 = 0
47:23/0 = 0
58:23/size_in_atlas = Vector2i(2, 1)
58:23/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
24:24/0 = 0
25:24/0 = 0
26:24/0 = 0
27:24/0 = 0
28:24/0 = 0
29:24/0 = 0
31:24/0 = 0
34:24/0 = 0
35:24/0 = 0
36:24/0 = 0
37:24/0 = 0
42:24/0 = 0
43:24/0 = 0
44:24/0 = 0
45:24/0 = 0
1:25/0 = 0
2:25/0 = 0
7:25/0 = 0
8:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
24:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
28:25/0 = 0
29:25/0 = 0
31:25/0 = 0
34:25/0 = 0
35:25/0 = 0
37:25/0 = 0
38:25/0 = 0
39:25/0 = 0
40:25/0 = 0
41:25/0 = 0
42:25/0 = 0
43:25/0 = 0
44:25/0 = 0
45:25/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
40:26/0 = 0
41:26/0 = 0
42:26/0 = 0
43:26/0 = 0
44:26/0 = 0
45:26/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
24:27/0 = 0
25:27/0 = 0
26:27/0 = 0
27:27/0 = 0
40:27/0 = 0
41:27/0 = 0
42:27/0 = 0
43:27/0 = 0
44:27/0 = 0
45:27/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
3:29/0 = 0
4:29/0 = 0
15:29/0 = 0
18:29/0 = 0
24:29/size_in_atlas = Vector2i(2, 1)
24:29/0 = 0
26:29/size_in_atlas = Vector2i(2, 1)
26:29/0 = 0
28:29/0 = 0
29:29/0 = 0
2:30/0 = 0
3:30/0 = 0
6:30/0 = 0
7:30/0 = 0
15:30/0 = 0
18:30/0 = 0
20:30/0 = 0
21:30/0 = 0
32:30/0 = 0
34:30/0 = 0
37:30/0 = 0
39:30/0 = 0
15:31/0 = 0
18:31/0 = 0
20:31/0 = 0
21:31/0 = 0
24:31/0 = 0
25:31/0 = 0
26:31/0 = 0
27:31/0 = 0
28:31/0 = 0
29:31/0 = 0
32:31/0 = 0
33:31/0 = 0
34:31/0 = 0
35:31/0 = 0
36:31/0 = 0
37:31/0 = 0
38:31/0 = 0
39:31/0 = 0
40:31/0 = 0
41:31/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
18:32/0 = 0
20:32/0 = 0
21:32/0 = 0
32:32/0 = 0
33:32/0 = 0
34:32/0 = 0
35:32/0 = 0
36:32/0 = 0
37:32/0 = 0
38:32/0 = 0
39:32/0 = 0
40:32/0 = 0
41:32/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
15:33/0 = 0
18:33/0 = 0
20:33/0 = 0
21:33/0 = 0
24:33/0 = 0
25:33/0 = 0
26:33/0 = 0
27:33/0 = 0
28:33/0 = 0
29:33/0 = 0
32:33/0 = 0
33:33/0 = 0
34:33/0 = 0
35:33/0 = 0
36:33/0 = 0
37:33/0 = 0
38:33/0 = 0
39:33/0 = 0
40:33/0 = 0
41:33/0 = 0
15:34/0 = 0
18:34/0 = 0
20:34/0 = 0
21:34/0 = 0
10:35/size_in_atlas = Vector2i(2, 3)
10:35/0 = 0
15:35/0 = 0
18:35/0 = 0
20:35/0 = 0
21:35/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
12:36/0 = 0
13:36/0 = 0
15:36/0 = 0
18:36/0 = 0
22:36/size_in_atlas = Vector2i(4, 3)
22:36/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
12:37/0 = 0
13:37/0 = 0
28:38/0 = 0
29:38/0 = 0
30:38/0 = 0
31:38/0 = 0
32:38/0 = 0
33:38/0 = 0
10:39/0 = 0
11:39/0 = 0
26:39/0 = 0
27:39/0 = 0
28:39/0 = 0
29:39/0 = 0
32:39/0 = 0
33:39/0 = 0
34:39/0 = 0
35:39/0 = 0
36:39/0 = 0
37:39/0 = 0
38:39/0 = 0
39:39/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
10:40/0 = 0
11:40/0 = 0
18:40/0 = 0
19:40/0 = 0
27:40/0 = 0
28:40/0 = 0
32:40/0 = 0
33:40/0 = 0
35:40/0 = 0
36:40/0 = 0
38:40/0 = 0
39:40/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
10:41/0 = 0
11:41/0 = 0
18:41/0 = 0
19:41/0 = 0
22:41/0 = 0
23:41/0 = 0
27:41/0 = 0
28:41/0 = 0
32:41/0 = 0
35:41/0 = 0
36:41/0 = 0
39:41/0 = 0
2:42/0 = 0
3:42/0 = 0
4:42/0 = 0
5:42/0 = 0
6:42/0 = 0
7:42/0 = 0
9:42/0 = 0
10:42/0 = 0
11:42/0 = 0
18:42/0 = 0
19:42/0 = 0
22:42/0 = 0
23:42/0 = 0
27:42/0 = 0
28:42/0 = 0
32:42/0 = 0
35:42/0 = 0
36:42/0 = 0
39:42/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
6:43/0 = 0
7:43/0 = 0
9:43/0 = 0
10:43/0 = 0
11:43/0 = 0
12:43/0 = 0
13:43/0 = 0
17:43/0 = 0
18:43/0 = 0
19:43/0 = 0
23:43/0 = 0
24:43/0 = 0
25:43/0 = 0
46:43/0 = 0
47:43/0 = 0
48:43/0 = 0
49:43/0 = 0
57:43/size_in_atlas = Vector2i(4, 4)
57:43/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
6:44/size_in_atlas = Vector2i(1, 4)
6:44/0 = 0
9:44/0 = 0
10:44/0 = 0
11:44/0 = 0
12:44/0 = 0
13:44/0 = 0
14:44/0 = 0
15:44/0 = 0
17:44/0 = 0
18:44/0 = 0
19:44/0 = 0
20:44/0 = 0
21:44/0 = 0
23:44/0 = 0
24:44/0 = 0
25:44/0 = 0
26:44/0 = 0
29:44/0 = 0
30:44/0 = 0
31:44/0 = 0
33:44/0 = 0
34:44/0 = 0
44:44/0 = 0
45:44/0 = 0
46:44/0 = 0
47:44/0 = 0
48:44/0 = 0
2:45/0 = 0
4:45/0 = 0
5:45/0 = 0
9:45/0 = 0
10:45/0 = 0
11:45/0 = 0
12:45/0 = 0
13:45/0 = 0
14:45/0 = 0
15:45/0 = 0
16:45/0 = 0
17:45/0 = 0
18:45/0 = 0
19:45/0 = 0
20:45/0 = 0
21:45/0 = 0
22:45/0 = 0
23:45/0 = 0
24:45/0 = 0
25:45/0 = 0
26:45/0 = 0
27:45/0 = 0
29:45/0 = 0
30:45/0 = 0
31:45/0 = 0
32:45/0 = 0
33:45/0 = 0
34:45/0 = 0
35:45/0 = 0
42:45/0 = 0
43:45/0 = 0
44:45/0 = 0
45:45/0 = 0
46:45/0 = 0
47:45/0 = 0
48:45/0 = 0
51:45/0 = 0
52:45/0 = 0
53:45/0 = 0
54:45/0 = 0
55:45/0 = 0
56:45/0 = 0
4:46/0 = 0
5:46/0 = 0
9:46/0 = 0
10:46/0 = 0
11:46/0 = 0
13:46/0 = 0
14:46/0 = 0
15:46/0 = 0
16:46/0 = 0
17:46/0 = 0
18:46/0 = 0
19:46/0 = 0
20:46/0 = 0
21:46/0 = 0
22:46/0 = 0
23:46/0 = 0
24:46/0 = 0
25:46/0 = 0
27:46/0 = 0
29:46/0 = 0
30:46/0 = 0
31:46/0 = 0
32:46/0 = 0
33:46/0 = 0
34:46/0 = 0
35:46/0 = 0
42:46/0 = 0
43:46/0 = 0
44:46/0 = 0
46:46/0 = 0
47:46/0 = 0
48:46/0 = 0
51:46/0 = 0
52:46/0 = 0
53:46/0 = 0
54:46/0 = 0
55:46/0 = 0
56:46/0 = 0
4:47/0 = 0
5:47/0 = 0
4:48/0 = 0
5:48/0 = 0
6:48/0 = 0
12:48/0 = 0
13:48/0 = 0
14:48/0 = 0
15:48/0 = 0
16:48/0 = 0
17:48/0 = 0
18:48/0 = 0
19:48/0 = 0
2:49/size_in_atlas = Vector2i(8, 1)
2:49/0 = 0
12:49/0 = 0
13:49/0 = 0
14:49/0 = 0
15:49/0 = 0
16:49/0 = 0
17:49/0 = 0
18:49/0 = 0
19:49/0 = 0
5:50/0 = 0
6:50/0 = 0
61:50/0 = 0
62:50/0 = 0
5:51/0 = 0
6:51/0 = 0
61:51/0 = 0
5:52/0 = 0
6:52/0 = 0
60:52/0 = 0
61:52/0 = 0
60:53/0 = 0
61:53/0 = 0
62:53/0 = 0
59:54/0 = 0
60:54/0 = 0
61:54/0 = 0
62:54/0 = 0
59:55/0 = 0
60:55/0 = 0
61:55/0 = 0
62:55/0 = 0
58:56/0 = 0
59:56/0 = 0
60:56/0 = 0
61:56/0 = 0
62:56/0 = 0
58:57/0 = 0
59:57/0 = 0
60:57/0 = 0
61:57/0 = 0
62:57/0 = 0
57:58/0 = 0
58:58/0 = 0
59:58/0 = 0
60:58/0 = 0
61:58/0 = 0
62:58/0 = 0
57:59/0 = 0
59:59/0 = 0
60:59/0 = 0
61:59/0 = 0
62:59/0 = 0
56:60/0 = 0
57:60/0 = 0
59:60/0 = 0
60:60/0 = 0
61:60/0 = 0
62:60/0 = 0
56:61/0 = 0
43:29/size_in_atlas = Vector2i(8, 9)
43:29/0 = 0
28:35/size_in_atlas = Vector2i(6, 3)
28:35/0 = 0
36:35/size_in_atlas = Vector2i(6, 3)
36:35/0 = 0
51:22/size_in_atlas = Vector2i(2, 2)
51:22/0 = 0
45:39/size_in_atlas = Vector2i(10, 3)
45:39/0 = 0
52:28/size_in_atlas = Vector2i(10, 10)
52:28/0 = 0
10:24/size_in_atlas = Vector2i(6, 2)
10:24/0 = 0
22:16/size_in_atlas = Vector2i(4, 3)
22:16/0 = 0
32:14/size_in_atlas = Vector2i(2, 2)
32:14/0 = 0
28:14/size_in_atlas = Vector2i(2, 2)
28:14/0 = 0
2:10/size_in_atlas = Vector2i(6, 7)
2:10/0 = 0
18:2/size_in_atlas = Vector2i(2, 2)
18:2/0 = 0
20:2/size_in_atlas = Vector2i(2, 2)
20:2/0 = 0
11:10/size_in_atlas = Vector2i(5, 4)
11:10/0 = 0
46:24/size_in_atlas = Vector2i(2, 4)
46:24/0 = 0
54:16/size_in_atlas = Vector2i(2, 4)
54:16/0 = 0
56:16/size_in_atlas = Vector2i(2, 4)
56:16/0 = 0
54:22/size_in_atlas = Vector2i(4, 2)
54:22/0 = 0
14:40/size_in_atlas = Vector2i(2, 3)
14:40/0 = 0
21:16/0 = 0
16:17/0 = 0
13:14/0 = 0
14:14/0 = 0

[sub_resource type="TileSet" id="TileSet_k1kkv"]
sources/0 = SubResource("TileSetAtlasSource_rcq0y")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2m154"]
size = Vector2(235, 89)

[node name="Intro" type="Node2D"]
script = ExtResource("1_cscjy")

[node name="BackgroundProps" type="TileMap" parent="."]
tile_set = SubResource("TileSet_k1kkv")
format = 2
layer_0/name = "BACK"
layer_0/tile_data = PackedInt32Array(851969, 2818048, 29, 851979, 2818048, 29, 1114129, 3538944, 22, 1114131, 3342336, 22, 786460, 2293760, 14, 851996, 2293760, 15, 786461, 2359296, 14, 851997, 2621440, 14, 917533, 2621440, 15, 983069, 2621440, 16, 1048605, 2621440, 17, 1114141, 2359296, 19, 786462, 2424832, 14, 851998, 2686976, 14, 917534, 2686976, 15, 983070, 2686976, 16, 1048606, 2686976, 17, 1114142, 2424832, 19, 786463, 2490368, 14, 851999, 2490368, 15, 851990, 2818048, 29, 786454, 3407872, 28, 1048591, 2359296, 35, 851986, 2818048, 29, 1114132, 1441792, 36)
layer_1/name = "MIDDLE"
layer_1/tile_data = PackedInt32Array(1048582, 2949120, 39, 1114178, 1572864, 29, 1114179, 1572864, 29, 1114180, 1703936, 29, 1114181, 1703936, 29, 1114183, 1703936, 29, 1114184, 1572864, 29, 1114188, 1572864, 29, 1114141, 3538944, 22, 1114143, 3342336, 22, 1048596, 983040, 6, 1114132, 983040, 7, 1048597, 1048576, 6, 1114133, 1048576, 7, 1048598, 1114112, 6, 1114134, 1114112, 7, 1048599, 1179648, 6, 1114135, 1179648, 7, 1048600, 1179648, 6, 1114136, 1179648, 7, 1048601, 1179648, 6, 1114137, 1179648, 7, 1048602, 1179648, 6, 1114138, 1179648, 7, 1048603, 1245184, 6, 1114139, 1245184, 7)
layer_2/name = "FRONT"
layer_2/tile_data = PackedInt32Array(1048579, 2359296, 35, 1114119, 1441792, 36, 1048586, 1835008, 35, 1114128, 1572864, 29, 1114129, 1703936, 29, 1114131, 1703936, 29, 1114130, 1835008, 31, 1048589, 655360, 35, 1114132, 1572864, 29, 1114134, 1441792, 36, 1114135, 1572864, 29, 1114137, 1703936, 29, 1114138, 1572864, 29, 1114140, 1703936, 29)

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource("1_ee2g7")
format = 2
layer_0/tile_data = PackedInt32Array(1179648, 786432, 6, 1179649, 851968, 6, 1179650, 1507328, 6, 1179651, 1114112, 6, 1179652, 1048576, 6, 1179653, 1245184, 6, 1179654, 851968, 6, 1179655, 983040, 6, 1179656, 1179648, 6, 1179657, 1376256, 6, 1179658, 1441792, 6, 1179659, 1310720, 6, 1179660, 1114112, 6, 1179661, 1507328, 6, 1179662, 1114112, 6, 1179663, 1441792, 6, 1179664, 1572864, 6, 1179665, 983040, 6, 1179666, 1179648, 6, 1179667, 1179648, 6, 1179668, 1048576, 6, 1179669, 1179648, 6, 1179670, 1376256, 6, 1179671, 1179648, 6, 1179672, 1048576, 6, 1179673, 1179648, 6, 1179674, 1310720, 6, 1179675, 1441792, 6, 1179676, 851968, 6, 1179677, 851968, 6, 1179678, 851968, 6, 1179679, 851968, 6, 1179680, 851968, 6, 1179681, 131072, 0, 1245184, 65536, 29, 1245185, 131072, 29, 1245186, 65536, 29, 1245187, 131072, 29, 1245188, 65536, 29, 1245189, 131072, 29, 1245190, 65536, 29, 1245191, 131072, 29, 1245192, 65536, 29, 1245193, 131072, 29, 1245194, 65536, 29, 1245195, 131072, 29, 1245196, 65536, 29, 1245197, 131072, 29, 1245198, 65536, 29, 1245199, 131072, 29, 1245200, 65536, 29, 1245201, 131072, 29, 1245202, 65536, 29, 1245203, 131072, 29, 1245204, 65536, 29, 1245205, 131072, 29, 1245206, 65536, 29, 1245207, 131072, 29, 1245208, 65536, 29, 1245209, 131072, 29, 1245210, 65536, 29, 1245211, 131072, 29, 1245212, 65536, 29, 1245213, 131072, 29, 1245214, 65536, 29, 1245215, 131072, 29, 1245216, 65536, 29, 1245217, 131072, 29, 1179682, 1507328, 6, 1179683, 1179648, 6, 1179684, 1114112, 6, 1179685, 1376256, 6, 1179686, 1179648, 6, 1179687, 1441792, 6, 1179688, 1376256, 6, 1179689, 1376256, 6, 1179690, 1507328, 6, 1179691, 1507328, 6, 1179692, 1048576, 6, 1179693, 983040, 6, 1179694, 1048576, 6, 1179695, 1376256, 6, 1179696, 1310720, 6, 1179697, 1114112, 6, 1245218, 65536, 29, 1245219, 131072, 29, 1245220, 65536, 29, 1245221, 131072, 29, 1245222, 65536, 29, 1245223, 131072, 29, 1245224, 65536, 29, 1245225, 131072, 29, 1245226, 65536, 29, 1245227, 131072, 29, 1245228, 65536, 29, 1245229, 131072, 29, 1245230, 65536, 29, 1245231, 131072, 29, 1245232, 65536, 29, 1245233, 131072, 29, 1179698, 131072, 0, 1179699, 262144, 0, 1179700, 196608, 0, 1179701, 65536, 0, 1179702, 196608, 0, 1179703, 196608, 0, 1179704, 196608, 0, 1179705, 196608, 0, 1179706, 131072, 0, 1179707, 65536, 0, 1179708, 262144, 0, 1179709, 262144, 0, 1179710, 196608, 0, 1179711, 262144, 0, 1179712, 196608, 0, 1179713, 196608, 0, 1179714, 196608, 0, 1179715, 196608, 0, 1179716, 196608, 0, 1179717, 65536, 0, 1179718, 262144, 0, 1179719, 65536, 0, 1179720, 262144, 0, 1179721, 131072, 0, 1179722, 65536, 0, 1179723, 262144, 0, 1179724, 262144, 0, 1245235, 131072, 29, 1245234, 65536, 29, 1245236, 65536, 29, 1245237, 131072, 29, 1245238, 65536, 29, 1245239, 131072, 29, 1245240, 65536, 29, 1245241, 131072, 29, 1245242, 65536, 29, 1245243, 131072, 29, 1245244, 65536, 29, 1245245, 131072, 29, 1245246, 65536, 29, 1245247, 131072, 29, 1245248, 65536, 29, 1245249, 131072, 29, 1245250, 65536, 29, 1245251, 131072, 29, 1245252, 65536, 29, 1245253, 131072, 29, 1245254, 65536, 29, 1245255, 131072, 29, 1245256, 65536, 29, 1245257, 131072, 29, 1245258, 65536, 29, 1245259, 131072, 29, 1245260, 65536, 29)

[node name="King" parent="." instance=ExtResource("2_niwdu")]
position = Vector2(200, 286)
BASE_SPEED = 80

[node name="Player" parent="." instance=ExtResource("4_vvsxt")]
position = Vector2(273, 285)

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2(0, -120)
zoom = Vector2(2.5, 2.5)

[node name="KingGuard" parent="." instance=ExtResource("5_b31l0")]
position = Vector2(180, 288)
BASE_SPEED = 80

[node name="ParallaxBackground" parent="." instance=ExtResource("6_xwj8l")]

[node name="StartIntro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartIntro"]
position = Vector2(118.5, 243.5)
shape = SubResource("RectangleShape2D_2m154")

[connection signal="restrict_control" from="." to="Player" method="_on_intro_restrict_control"]
[connection signal="body_entered" from="StartIntro" to="." method="_on_start_intro_body_entered"]
